--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </dt>
     </dl>
 <!--
+
     <dl>
     <dt>[EM] Yakov Eliashberg, Nikolai Mishachev
     <em>Introduction to the h-principle.</em>
@@ -75,7 +76,13 @@
     <em>The geometry of the group of symplectic diffeomorphisms.</em>
     </dt>
     </dl>
-    
+ -->
+    <dl>
+    <dt>[S] Michael Spivak,
+    <em>A comprehensive introduction to differential geometry. vol. I--V.</em>
+    </dt>
+    </dl>
+<!--
     <dl>
     <dt>[SM] Bruno Scardua, Carlos Morales,
     <em>Geometry, dynamics and topology of foliations.</em>
@@ -94,6 +101,10 @@
     <em><a href="https://anton-petrunin.github.io/530/tex/lectures.pdf"> <em> Extra 4 lectures.</em></a></em>
     </dt>
     </dl>
+
+
+
+
 -->
 
 </li>
@@ -198,25 +209,8 @@ Is this distribution involutive and/or integrable?
 <!--
 <li> HWA-08, due Mon, Oct 18.
 <ul>
-<li> Let \(\alpha = xdx + ydy + zdz\) and \(\omega = dx \wedge dy \wedge dz\) be differential forms on \(\mathbb{R}^3\). 
-<br>
-(a) Find a differential form  \(\beta\) on \(\mathbb{R}^3 \backslash \{0\}\) such that \(\omega= \alpha\wedge \beta\).
-<br>
-(b) Show that there is no differential form \(\gamma\) on \(\mathbb{R}^3\) such that \(\omega= \alpha\wedge \gamma\).
-</li>
-<li>Let \(f\colon \mathbb{S}^{2{\cdot}n-1}\to \mathbb{S}^n\) for \(n \ge 2\), be a smooth map, and let \(\omega\) be an \(n\)-form on \(\mathbb{S}^n\) such that \(\int_{S^n}\omega = 1\). Show that \(f^* \omega\) is exact, and if \(f^* \omega= d\alpha\), then the number 
-\(\int_{S^{2n-1}}\alpha\wedge d \alpha\) 
-is independent of the choice of \(\omega\) and \(\alpha\).
-</li>
-<li>Let \(\omega\) be a nowhere zero 1-form on a smooth compact manifold \(M\).
-Show that if \(\omega\wedge d\omega=0\), then there exists a 1-form  \(\alpha\) such that \(d\omega= \alpha\wedge \omega\).
-Hint: First do it locally and then use a partition of unity.
-</li>
-<li>Describe a homomorphism \(h:H^2_{dR}(\mathbb{S}^2\times \mathbb{S}^2)\to H^2_{dR}(\mathbb{T}^4)\) that cannot be realized as an induced homomorphism for a smooth map \(\mathbb{T}^4\to \mathbb{S}^2\times \mathbb{S}^2\) (here \(\mathbb{T}^4\) denotes 4-dimensional torus).
-</li>
-<li>
-Construct a closed 2-form \(\omega\) on \(M = (\mathbb{S}^2 )^n\) such that \(\omega^{\wedge n} \not= 0\) at any point of \(M\).
-</li>
+
+
 </ul>
 </li>
 
@@ -240,8 +234,6 @@ Show that the total space \(E\) admits a Morse function with \(m{\cdot}n\) criti
 <li> Suppose that a compact connected manifold \(M\) admits a Morse function with \(n\) citical points of index 1 and \(m\) citical points of index 2.
 Show that the fundamental group of \(M\) admits a presentation with \(n\) generators and \(m\) relations.
 </li>
-<li>Show that any two open star-shaped sets in \(\mathbb{R}^n\) are diffeomorphic.
-</li>
 <li>Let \(\omega\) be an \(n\)-form on an oriented closed connected \(n\)-dimensional manifold \(M\).
 Show that \(\omega\) is exact if and only if \(\int_M\omega=0\).
 <br>
@@ -250,6 +242,31 @@ Show that \(\omega\) is exact if and only if \(\int_M\omega=0\).
 </ul>
 </li>
 -->
+
+<li> HWA-08, due Tue, Oct 22.
+<ul>
+<li> Read [L, Chapter 18]</li>
+<li> Try to read "On the volume elements on a manifold" by J. Moser.</li>
+<li>Let \(\omega\) be a nowhere zero 1-form on a smooth compact manifold \(M\).
+Show that if \(\omega\wedge d\omega=0\) if and only if there exists a 1-form  \(\alpha\) such that \(d\omega= \alpha\wedge \omega\).<br>
+Hint: First do it locally and then use a partition of unity.
+</li>
+<li> Calculate \(H^2_{dR}(\mathbb{S}^2\times \mathbb{S}^2)\) and \(H^2_{dR}(\mathbb{T}^4)\) using symmetries (here \(\mathbb{T}^4\) denotes 4-dimensional torus).
+Describe a homomorphism \(h:H^2_{dR}(\mathbb{S}^2\times \mathbb{S}^2)\to H^2_{dR}(\mathbb{T}^4)\) that cannot be realized as an induced homomorphism for a smooth map \(\mathbb{T}^4\to \mathbb{S}^2\times \mathbb{S}^2\).
+</li>
+<li>
+Construct a closed 2-form \(\omega\) on \(M = (\mathbb{S}^2)^{\times n}\) such that \(\omega^{\wedge n} \not= 0\) at any point of \(M\).
+Use it to show that any continuous map \(\mathbb{S}^{2\cdot n}\to M\) has vanishing degree.
+</li>
+<li>Let \(f\colon \mathbb{S}^{2{\cdot}n-1}\to \mathbb{S}^n\) for \(n \ge 2\), be a smooth map, and let \(\omega\) be an \(n\)-form on \(\mathbb{S}^n\) such that \(\int_{S^n}\omega = 1\). Show that \(f^* \omega\) is exact, and if \(f^* \omega= d\alpha\), then the number
+\(\int_{S^{2n-1}}\alpha\wedge d \alpha\)
+is independent of the choice of \(\omega\) and \(\alpha\).
+</li>
+<li>Show that any open star-shaped set in \(\mathbb{R}^n\) is diffeomorphic to \(\mathbb{R}^n\).
+</li>
+<li> As a reference, you may use [S, vol. V,  chap. 13, sec. 6].</li>
+</ul>
+</li>
 
 <li> HWA-07, due Tue, Oct 15.
 <ul>
@@ -287,7 +304,7 @@ Find the components of \(\tau\) in spherical coordinates.</li>
 Suppose that \(\sum_i\alpha_i\wedge\beta_i=0\)
 for some covectors \(\beta_1,\dots, \beta_k\).
 Show that each \(\beta_i\) is a linear combination of \(\alpha_1,\dots, \alpha_k\).</li>
-<li> Show that any 2-covector \(\vartheta\) can be written as a sum \(\sum_i\alpha_i\wedge\beta_i\) for linearly independent covectors \(\alpha_1,\dots, \alpha_k,\beta_1,\dots, \beta_k\)</li>
+<li> Show that any 2-covector \(\vartheta\) can be written as a sum \(\sum_i\alpha_i\wedge\beta_i\) for linearly independent covectors \(\alpha_1,\dots, \alpha_k,\beta_1,\dots, \beta_k\).</li>
 <li> Let \(\vartheta\) be a 2-covector. Show that \(\vartheta\wedge\vartheta=0\) if and only if \(\vartheta\) is decomposabe; that is, \(\vartheta=\alpha\wedge \beta\) for some covectors \(\alpha\) and \(\beta\).
 </li>
 </ul>
