--- a/index.html
+++ b/index.html
@@ -247,9 +247,12 @@ Show that \(\omega\) is exact if and only if \(\int_M\omega=0\).
 <ul>
 <li> Read [L, Chapter 18]</li>
 <li> Try to read "On the volume elements on a manifold" by J. Moser.</li>
-<li>Let \(\omega\) be a nowhere zero 1-form on a smooth compact manifold \(M\).
+<li> Let \(M\) and \(N\) be closed connected oriented \(n\)-dimesional manifolds
+and let \(\omega\) be an \(n\)-form on \(N\).
+Show that \(\int_M\varphi^*\omega=\deg\varphi\cdot\int_N\omega\), where \(\varphi\colon M\to N\) is a smooth map and \(\deg\varphi\) is its degree as defined in [M].</li>
+<li><del>Let \(\omega\) be a nowhere zero 1-form on a smooth compact manifold \(M\).
 Show that if \(\omega\wedge d\omega=0\) if and only if there exists a 1-form  \(\alpha\) such that \(d\omega= \alpha\wedge \omega\).<br>
-Hint: First do it locally and then use a partition of unity.
+Hint: First do it locally and then use a partition of unity.</del>
 </li>
 <li> Calculate \(H^2_{dR}(\mathbb{S}^2\times \mathbb{S}^2)\) and \(H^2_{dR}(\mathbb{T}^4)\) using symmetries (here \(\mathbb{T}^4\) denotes 4-dimensional torus).
 Describe a homomorphism \(h:H^2_{dR}(\mathbb{S}^2\times \mathbb{S}^2)\to H^2_{dR}(\mathbb{T}^4)\) that cannot be realized as an induced homomorphism for a smooth map \(\mathbb{T}^4\to \mathbb{S}^2\times \mathbb{S}^2\).
