--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@ Hint: First do it locally and then use a partition of unity.</del>
 </li>
 <li> Calculate \(H^2_{dR}(\mathbb{S}^2\times \mathbb{S}^2)\) and \(H^2_{dR}(\mathbb{T}^4)\) using symmetries (here \(\mathbb{T}^4\) denotes 4-dimensional torus).
 Describe a homomorphism \(h:H^2_{dR}(\mathbb{S}^2\times \mathbb{S}^2)\to H^2_{dR}(\mathbb{T}^4)\) that cannot be realized as an induced homomorphism for a smooth map \(\mathbb{T}^4\to \mathbb{S}^2\times \mathbb{S}^2\).
+<br>You may use [S, vol. V,  chap. 13, sec. 6] as a reference.</li>
 </li>
 <li>
 Construct a closed 2-form \(\omega\) on \(M = (\mathbb{S}^2)^{\times n}\) such that \(\omega^{\wedge n} \not= 0\) at any point of \(M\).
@@ -267,7 +268,6 @@ is independent of the choice of \(\omega\) and \(\alpha\).
 </li>
 <li>Show that any open star-shaped set in \(\mathbb{R}^n\) is diffeomorphic to \(\mathbb{R}^n\).
 </li>
-<li> As a reference, you may use [S, vol. V,  chap. 13, sec. 6].</li>
 </ul>
 </li>
 
