--- a/index.html
+++ b/index.html
@@ -205,6 +205,11 @@ Is this distribution involutive and/or integrable?
 
 -->
 <p>
+There will be a midterm sometime before Thanksgiving; here is a <a href="tex/mt-oral.pdf">preliminary list of questions</a>.
+</p>
+<hr color="#ccddcc" />
+<p>
+
 <ul>
 <!--
 <li> HWA-08, due Mon, Oct 18.
@@ -234,14 +239,22 @@ Show that the total space \(E\) admits a Morse function with \(m{\cdot}n\) criti
 <li> Suppose that a compact connected manifold \(M\) admits a Morse function with \(n\) citical points of index 1 and \(m\) citical points of index 2.
 Show that the fundamental group of \(M\) admits a presentation with \(n\) generators and \(m\) relations.
 </li>
-<li>Let \(\omega\) be an \(n\)-form on an oriented closed connected \(n\)-dimensional manifold \(M\).
-Show that \(\omega\) is exact if and only if \(\int_M\omega=0\).
-<br>
-(Hint: first use induction on \(n\) to show that if \(\omega\) be an \(n\)-form on \(\mathbb{R}^n\) with comact support, then \(\omega\) is exact if and only if \(\int_{\mathbb{R}^n}\omega=0\)).
-</li>
+
 </ul>
 </li>
 -->
+
+<li> HWA-09, due Tue, Oct 29.
+<ul>
+<li> Continue to read [L, Chapter 18]</li>
+<li> Start to think about the midterm; prepare one question (at least); this is part of the HWA.</li>
+<li> Problems 17-1, 17-5, 17-12, 17-13 from [L].</li>
+<li>Let \(\alpha\) be a nowhere zero 1-form on a smooth compact manifold \(M\).
+Show that \(\alpha\wedge d\alpha=0\) if and only if there exists a 1-form  \(\beta\) such that \(d\alpha= \alpha\wedge \beta\).<br>
+Hint: First do it locally and then use a partition of unity.
+</li>
+</ul>
+</li>
 
 <li> HWA-08, due Tue, Oct 22.
 <ul>
@@ -250,19 +263,15 @@ Show that \(\omega\) is exact if and only if \(\int_M\omega=0\).
 <li> Let \(M\) and \(N\) be closed connected oriented \(n\)-dimesional manifolds
 and let \(\omega\) be an \(n\)-form on \(N\).
 Show that \(\int_M\varphi^*\omega=\deg\varphi\cdot\int_N\omega\), where \(\varphi\colon M\to N\) is a smooth map and \(\deg\varphi\) is its degree as defined in [M].</li>
-<li><del>Let \(\omega\) be a nowhere zero 1-form on a smooth compact manifold \(M\).
-Show that if \(\omega\wedge d\omega=0\) if and only if there exists a 1-form  \(\alpha\) such that \(d\omega= \alpha\wedge \omega\).<br>
-Hint: First do it locally and then use a partition of unity.</del>
-</li>
 <li> Calculate \(H^2_{dR}(\mathbb{S}^2\times \mathbb{S}^2)\) and \(H^2_{dR}(\mathbb{T}^4)\) using symmetries (here \(\mathbb{T}^4\) denotes 4-dimensional torus).
 Describe a homomorphism \(h:H^2_{dR}(\mathbb{S}^2\times \mathbb{S}^2)\to H^2_{dR}(\mathbb{T}^4)\) that cannot be realized as an induced homomorphism for a smooth map \(\mathbb{T}^4\to \mathbb{S}^2\times \mathbb{S}^2\).
 <br>You may use [S, vol. V,  chap. 13, sec. 6] as a reference.</li>
 </li>
 <li>
-Construct a closed 2-form \(\omega\) on \(M = (\mathbb{S}^2)^{\times n}\) such that \(\omega^{\wedge n} \not= 0\) at any point of \(M\).
+Construct a closed 2-form \(\omega\) on \(M = (\mathbb{S}^2)^{\times n}\) for \(n \geqslant 2\) such that \(\omega^{\wedge n} \not= 0\) at any point of \(M\).
 Use it to show that any continuous map \(\mathbb{S}^{2\cdot n}\to M\) has vanishing degree.
 </li>
-<li>Let \(f\colon \mathbb{S}^{2{\cdot}n-1}\to \mathbb{S}^n\) for \(n \ge 2\), be a smooth map, and let \(\omega\) be an \(n\)-form on \(\mathbb{S}^n\) such that \(\int_{S^n}\omega = 1\). Show that \(f^* \omega\) is exact, and if \(f^* \omega= d\alpha\), then the number
+<li>Let \(f\colon \mathbb{S}^{2{\cdot}n-1}\to \mathbb{S}^n\) for \(n \geqslant 2\), be a smooth map, and let \(\omega\) be an \(n\)-form on \(\mathbb{S}^n\) such that \(\int_{S^n}\omega = 1\). Show that \(f^* \omega\) is exact, and if \(f^* \omega= d\alpha\), then the number
 \(\int_{S^{2n-1}}\alpha\wedge d \alpha\)
 is independent of the choice of \(\omega\) and \(\alpha\).
 </li>
